[B]Retrospect v5.2.19 - Changelog - 2020-12-20[/B]

Some Swedish channels had to be updated, as did NRK.no. During the fix, a small bug surfaced that had to be squashed.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
* Fixed: Some channels without settings did appear with settings in the context menu.

[B]Channel related[/B]
* Fixed: Some vier.be clips did not play (See #1463)